jstat reports incorrect values for OU for CMS GC

XMLWordPrintable

    • gc
    • b04

      With CMS GC, at certain points, 'OU' (Old usage) values reported in the jstat output increase first and then drop down. This is wrong because the 'old usage' drops down without any old generation collection.

        1. perf_jstat.sh
          0.6 kB
        2. test.java
          0.8 kB
        3. perf_jstat.log
          35.69 MB
        4. gc_jstat.log
          1.29 MB

            Assignee:
            Poonam Bajaj Parhar
            Reporter:
            Shadow Bug
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: