8215523: jstat reports incorrect values for OU for CMS GC

Reviewed-by: tschatzl, sgehwolf